--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "apexcharts": "^3.32.0",
     "axios": "^0.24.0",
     "popper.js": "^1.16.1",
-    "vue": "^3.2.16"
+    "vue": "^3.2.16",
+    "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
